--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,4 +1,4 @@
-FROM node:alpine as builder
+FROM node:alpine
 
 WORKDIR '/app'
 
@@ -7,7 +7,4 @@ RUN npm install
 
 COPY . .
 
-RUN npm run build 
-
-FROM nginx 
-COPY --from=builder /app/build /usr/share/nginx/html
+CMD [ "npm","run","start"]
