--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -f Dockerfile.dev .
+  - docker build -t kishan812069/docker-react -f Dockerfile.dev .
+
+script:
+  - docker run kishan812069/docker-react npm run test -- --coverage
